--- a/src/App.css
+++ b/src/App.css
@@ -39,9 +39,9 @@ select {
   border-radius: 8px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   max-width: 100%;
-  min-height: 150px; /* Ensure a minimum height */
-  box-sizing: border-box; /* Ensure padding does not affect width */
-  overflow: auto; /* Handle overflow content */
+  min-height: 150px; 
+  box-sizing: border-box; 
+  overflow: auto; 
 }
 
 .answer-option {
@@ -80,7 +80,6 @@ button.btn:hover {
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-  /* text-align: center; */
   max-width: 100%;
   min-height: 150px; 
   box-sizing: border-box; 
@@ -94,11 +93,11 @@ button.btn:hover {
 }
 
 .feedback.correct {
-  color: #28a745; /* Green for correct */
+  color: #28a745; 
 }
 
 .feedback.incorrect {
-  color: #dc3545; /* Red for incorrect */
+  color: #dc3545; 
 }
 
 .feedback-icon {
@@ -108,9 +107,17 @@ button.btn:hover {
 }
 
 .feedback.correct .feedback-icon {
-  color: #28a745; /* Green for correct */
+  color: #28a745; 
 }
 
 .feedback.incorrect .feedback-icon {
-  color: #dc3545; /* Red for incorrect */
+  color: #dc3545; 
+}
+
+
+/* Course Selections*/
+
+select option[disabled] {
+  color: gray;
+  background-color: #e1dddd;
 }
